--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 
-<body class="bg-grey">
+<body class="bg-grey font">
     <header>
         <div class="bg-white">
             <img id="logo-toboo" src="./img/Toboolist-logo.jpg" alt="logo toboolist">
@@ -26,7 +29,7 @@
                 <details class="m5">
                     <summary class="titles"> New Task </summary>
                     <ul class="costum-icon-list">
-                        <li><span class="icongreen">&check;</span>Quarterly Newsletter </li>
+                        <li><span class="icongreen">&check;</span>Quarterly Newsletter <span class="editorial-icon icons">Editorial</span></li>
                     </ul>
                 </details>
             </section>
@@ -35,10 +38,10 @@
                 <details class="m5">
                     <summary class="titles">Today </summary>
                     <ul class="costum-icon-list">
-                        <li><span class="icongreen">&check;</span> Recruiting blog post</li>
-                        <li><span class="icongreen">&check;</span>Mobile app launch</li>
-                        <li><span class="iconred"> &#x2718; </span>Interview John H</li>
-                        <li><span class="icongreen">&check;</span>Submit Update to mobile storefronts</li>
+                        <li><span class="icongreen">&check;</span> Recruiting blog post<span class="editorial-icon icons">Editorial</span></li>
+                        <li><span class="icongreen">&check;</span>Mobile app launch<span class="q1-icon icons">Q1 Goals</span></li>
+                        <li><span class="iconred"> &#x2718; </span>Interview John H <span class="recruite-icon icons">Recruiting</span></li>
+                        <li><span class="icongreen">&check;</span>Submit Update to mobile storefronts<span class="mobile-icon icons">Mobile</span></li>
                     </ul>
                     
                 </details>
@@ -49,9 +52,9 @@
                     <summary class="titles">Upcoming </summary>
                     <ul class="costum-icon-list">
                         <li><span class="iconred"> &#x2718; </span>Schedule meeting with Alex</li>
-                        <li><span class="icongreen">&check;</span>Homepage refresh</li>
-                        <li><span class="icongreen">&check;</span>Onboard new Sales team members </li>
-                        <li><span class="icongreen">&check;</span>Review editorial calendar </li>
+                        <li><span class="icongreen">&check;</span>Homepage refresh<span class="web-icon icons">Website</span></li>
+                        <li><span class="icongreen">&check;</span>Onboard new Sales team members <span class="sales-icon icons">Sales</span></li>
+                        <li><span class="icongreen">&check;</span>Review editorial calendar<span class="editorial-icon icons">Editorial</span> </li>
                     </ul>
                     
                 </details>
